@@ -43,7 +43,7 @@ public final class FunctionSTR2GO extends AbstractFunction {
   public Value executeStrBool(@Nonnull final PreprocessorContext context, @Nonnull final Value source, @Nonnull final Value splitAndQuoteLines) {
     if (splitAndQuoteLines.asBoolean()){
       final boolean endsWithNextLine = source.asString().endsWith("\n");
-      final String [] splitted = source.asString().split("\\n");
+      final String [] splitted = PreprocessorUtils.splitForCharAndHoldEmptyLine(source.asString(),'\n');
       final StringBuilder result = new StringBuilder(source.asString().length()*2);
       final String nextLineChars = PreprocessorUtils.getNextLineCodes();
       
